fix code smells (#1761)