@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.em.hrs.service;
 
-import org.junit.Assert;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -14,14 +13,14 @@ import org.springframework.web.context.request.ServletRequestAttributes;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.authorisation.validators.AuthTokenValidator;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
-import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -39,13 +38,10 @@ class SecurityServiceImplTest {
     private static final String SYSTEM_USER = "SystemUser";
     private static final String SYSTEM_USER_PASSWORD = "SystemPassword";
     private static final String USER_ID = UUID.randomUUID().toString();
-    private static final UserDetails USER_DETAILS = UserDetails.builder()
-        .id(USER_ID)
-        .email(SHARER_EMAIL_ADDRESS)
-        .build();
     private static final UserInfo USER_INFO = UserInfo.builder()
+        .sub(SHARER_EMAIL_ADDRESS)
         .uid(USER_ID)
-        .roles(Arrays.asList("caseworker-hrs-searcher"))
+        .roles(List.of("caseworker-hrs-searcher"))
         .build();
     private static final String SERVICE_NAME = "TestService";
 
@@ -71,12 +67,12 @@ class SecurityServiceImplTest {
 
     @Test
     void testShouldGetUserId() {
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
 
         final String userId = underTest.getUserId(AUTHORIZATION_TOKEN);
 
         assertThat(userId).isEqualTo(USER_ID);
-        verify(idamClient, times(1)).getUserDetails(AUTHORIZATION_TOKEN);
+        verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
     }
 
     @Test
@@ -91,50 +87,50 @@ class SecurityServiceImplTest {
 
     @Test
     void testShouldGetUserEmail() {
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
 
         final String userEmail = underTest.getUserEmail(AUTHORIZATION_TOKEN);
 
         assertThat(userEmail).isEqualTo(SHARER_EMAIL_ADDRESS);
-        verify(idamClient, times(1)).getUserDetails(AUTHORIZATION_TOKEN);
+        verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
     }
 
     @Test
     void testShouldGetTokensMap() {
         doReturn(AUTHORIZATION_TOKEN).when(idamClient).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
         doReturn(SERVICE_AUTHORIZATION_TOKEN).when(authTokenGenerator).generate();
 
         final Map<String, String> tokens = underTest.getTokens();
 
         assertThat(tokens).isNotNull().isNotEmpty();
         verify(idamClient, times(1)).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        verify(idamClient, times(1)).getUserDetails(AUTHORIZATION_TOKEN);
+        verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
         verify(authTokenGenerator, times(1)).generate();
     }
 
     @Test
     void testShouldDefaultGetUserId() {
         doReturn(AUTHORIZATION_TOKEN).when(idamClient).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
 
         final String userId = underTest.getUserId();
 
         assertThat(userId).isEqualTo(USER_ID);
         verify(idamClient, times(1)).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        verify(idamClient, times(1)).getUserDetails(AUTHORIZATION_TOKEN);
+        verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
     }
 
     @Test
     void testShouldDefaultGetUserEmail() {
         doReturn(AUTHORIZATION_TOKEN).when(idamClient).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
 
         final String userEmail = underTest.getUserEmail();
 
         assertThat(userEmail).isEqualTo(SHARER_EMAIL_ADDRESS);
         verify(idamClient, times(1)).getAccessToken(SYSTEM_USER, SYSTEM_USER_PASSWORD);
-        verify(idamClient, times(1)).getUserDetails(AUTHORIZATION_TOKEN);
+        verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
     }
 
     @Test
@@ -142,52 +138,52 @@ class SecurityServiceImplTest {
         doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
 
         final UserInfo userInfo = underTest.getUserInfo(AUTHORIZATION_TOKEN);
-        Assert.assertEquals(1,userInfo.getRoles().size());
+        assertEquals(1, userInfo.getRoles().size());
         verify(idamClient, times(1)).getUserInfo(AUTHORIZATION_TOKEN);
     }
 
     @Test
     void testGetCurrentlyAuthenticatedServiceNameDummyName() {
-        Assert.assertEquals(SecurityServiceImpl.DUMMY_NAME, underTest.getCurrentlyAuthenticatedServiceName());
+        assertEquals(SecurityServiceImpl.DUMMY_NAME, underTest.getCurrentlyAuthenticatedServiceName());
     }
 
     @Test
     void testGetCurrentlyAuthenticatedServiceName() {
         doReturn("Xxxxxxxxxxxxxxxxxx").when(request).getHeader(SecurityServiceImpl.SERVICE_AUTH);
         doReturn(SERVICE_NAME).when(authTokenValidator).getServiceName(Mockito.anyString());
-        Assert.assertEquals(SERVICE_NAME, underTest.getCurrentlyAuthenticatedServiceName());
+        assertEquals(SERVICE_NAME, underTest.getCurrentlyAuthenticatedServiceName());
     }
 
     @Test
     void testGetCurrentlyAuthenticatedServiceNameNullRequest() {
         RequestContextHolder.setRequestAttributes(null);
-        Assert.assertEquals(DUMMY_NAME, underTest.getCurrentlyAuthenticatedServiceName());
+        assertEquals(DUMMY_NAME, underTest.getCurrentlyAuthenticatedServiceName());
 
     }
 
     @Test
     void testGetAuditUserEmail() {
         doReturn(AUTHORIZATION_TOKEN).when(request).getHeader(SecurityServiceImpl.USER_AUTH);
-        doReturn(USER_DETAILS).when(idamClient).getUserDetails(AUTHORIZATION_TOKEN);
-        Assert.assertEquals(SHARER_EMAIL_ADDRESS, underTest.getAuditUserEmail());
+        doReturn(USER_INFO).when(idamClient).getUserInfo(AUTHORIZATION_TOKEN);
+        assertEquals(SHARER_EMAIL_ADDRESS, underTest.getAuditUserEmail());
     }
 
     @Test
     void testGetAuditUserEmailNullRequest() {
         RequestContextHolder.setRequestAttributes(null);
-        Assert.assertEquals(HRS_INGESTOR, underTest.getAuditUserEmail());
+        assertEquals(HRS_INGESTOR, underTest.getAuditUserEmail());
     }
 
     @Test
     void testGetClientIpNullRequest() {
         RequestContextHolder.setRequestAttributes(null);
-        Assert.assertEquals(null, underTest.getClientIp());
+        assertEquals(null, underTest.getClientIp());
     }
 
     @Test
     void testGetClientIp() {
         doReturn("127.0.0.1").when(request).getHeader(CLIENTIP);
-        Assert.assertEquals("127.0.0.1", underTest.getClientIp());
+        assertEquals("127.0.0.1", underTest.getClientIp());
     }
 
 
